testing grid height to fix stretch

--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -37,11 +37,11 @@
 }
 .grid img {
   max-width: 100%;
-  height: 200px;
+  height: 175px;
 }
 .gridBox {
   position: relative;
-  height: 200px;
+  height: 175px;
 }
 .boxText {
   position: absolute;
